--- a/AboutThisBuild.txt.in
+++ b/AboutThisBuild.txt.in
@@ -14,3 +14,7 @@ Build flags: ${CXX_FLAGS}
 Link flags: ${LFLAGS}
 OpenMP support: ${OPTION_OMP}
 MMAP support: ${WITH_MYFILE_MMAP}
+Build OS: ${BUILDINFO_OS}
+Build date: ${BUILDINFO_DATE}
+Epoch: ${BUILDINFO_EPOCH}
+UUID: ${BUILDINFO_UUID}
