--- a/tools/osx/Info.plist.in
+++ b/tools/osx/Info.plist.in
@@ -5,26 +5,26 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
-	<string>RawTherapee</string>
+	<string>ART</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleTypeExtensions</key>
 			<array>
-				<string>pp3</string>
-				<string>PP3</string>
+				<string>arp</string>
+				<string>ARP</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
 			<string>profile.icns</string>
 			<key>CFBundleTypeName</key>
-			<string>RawTherapee Profile Data</string>
+			<string>ART Profile Data</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>LSIsAppleDefaultForType</key>
 			<true/>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>com.rawtherapee.pp3</string>
+				<string>us.pixls.art.arp</string>
 			</array>
 		</dict>
 		<dict>
@@ -36,6 +36,8 @@
 				<string>arw</string>
 				<string>CR2</string>
 				<string>cr2</string>
+                <string>CR3</string>
+                <string>cr3</string>
 				<string>CRF</string>
 				<string>crf</string>
 				<string>CRW</string>
@@ -109,17 +111,17 @@
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
-	<string>rawtherapee</string>
+	<string>ART</string>
 	<key>CFBundleGetInfoString</key>
-	<string>@version@, Copyright © 2004-2010 Gábor Horváth, 2010-2017 RawTherapee Development Team</string>
+	<string>@version@, ART (c) MMXIX-MMXX Alberto Griggio (c) 2004-2010 Gábor Horváth, 2010-2017 RawTherapee Development Team</string>
 	<key>CFBundleIconFile</key>
-	<string>rawtherapee.icns</string>
+	<string>art.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.rawtherapee.rawtherapee</string>
+	<string>us.pixls.art.ART</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>RawTherapee</string>
+	<string>ART</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -135,7 +137,7 @@
 	<key>NSHighResolutionCapable</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2004-2010 Gábor Horváth, 2010-2017 RawTherapee Development Team</string>
+	<string>ART: (c) MMXIX-MMXX Alberto Griggio, RawTherapee: copyright (c) 2004-2010 Gábor Horváth, 2010-2020 RawTherapee Development Team</string>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
@@ -144,21 +146,21 @@
 				<string>public.data</string>
 			</array>
 			<key>UTTypeDescription</key>
-			<string>RawTherapee Profile Data</string>
+			<string>ART Profile Data</string>
 			<key>UTTypeIconFile</key>
 			<string>Icons.icns</string>
 			<key>UTTypeIdentifier</key>
-			<string>com.rawtherapee.pp3</string>
+			<string>us.pixls.art.arp</string>
 			<key>UTTypeReferenceURL</key>
-			<string>http://www.rawtherapee.com/</string>
+			<string>https://bitbucket.org/agriggio/art/wiki/Home</string>
 			<key>UTTypeTagSpecification</key>
 			<dict>
 				<key>com.apple.ostype</key>
-				<string>PP3</string>
+				<string>ARP</string>
 				<key>public.filename-extension</key>
 				<array>
-					<string>pp3</string>
-					<string>PP3</string>
+					<string>arp</string>
+					<string>ARP</string>
 				</array>
 			</dict>
 		</dict>
