--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,13 @@
-- name: Docker Action
-  uses: zenato/docker-action@v1.0.0
-  with:
-    # Registry username
-    username: kd6kxr
-    # Registry password
-    password: 70fc78fa-71fb-4211-8236-0bcd6548ba6c
-    # Repository on registry
-    repository: art-test
+name: Publish Docker
+on: [push]
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - name: Publish to Registry
+      uses: HurricanKai/Publish-Docker-Github-Action@master
+      with:
+        name: kd6kxr/art-test
+        username: ${{ secrets.dockerhubusername }}
+        password: ${{ secrets.dockerhubtoken }}
